[package]
name = "pajamas"
version = "0.1.0"
authors = ["Dylan Baker <dylan@simulacrum.party>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pj"
path = "src/main.rs"

[dependencies]
clap = "3.0.0-beta.2"
lazy_static = "1.4.0"
regex = "1.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
